--- a/cares.html
+++ b/cares.html
@@ -206,11 +206,7 @@
           <h3>Hope Heroes</h3>
           <span>For Differently Abled</span>
           <p>
-            Hope Heroes is a Non-profit Organization based in Udaipur, Rajasthan
-            which has been providing its service for more than 35 years. It aims
-            to help specially-abled children and adults to develop essential
-            skills. This organization helps those belonging to the economically
-            disadvantaged sections.
+            
           </p>
         </div>
 
@@ -411,7 +407,7 @@
         <hr class="mb-4" />
         <div class="row align-items-center">
           <div class="text-center">
-            Copyright &copy; and &reg; Since 2020 Under ApniDukaan.com | Qazi
+            Copyright &copy; and &reg; Since 2020 Under ApniDukaan.com | MAYANK
             Maaz Arshad
           </div>
         </div>
