--- a/tvAndAppliances.html
+++ b/tvAndAppliances.html
@@ -321,7 +321,7 @@
       <hr class="mb-4">
       <div class="row align-items-center">
         <div class="text-center">
-          Copyright &copy; and &reg; Since 2020 Under ApniDukaan.com | Qazi Maaz Arshad
+          Copyright &copy; and &reg; Since 2020 Under ApniDukaan.com | MAYANK
         </div>
       </div>
     </div>
